# fun-with-fastpi-di

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/endpoints/: __init__.py  login.py
app/lib/: authenticator.py
app/models/: user.py
