[tool.poetry]
name = "autha"
version = "0.1.0"
description = ""
authors = ["hongymagic <hongymagic+github@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.35.0"
uvicorn = "^0.8.6"
ujson = "^1.35"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.black]
exclued = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
